# ableton-mcp

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/ableton_mcp/: osc_client.py  prompts.py  server.py
src/ableton_mcp/theory/: __init__.py  chords.py  drums.py  key.py  pitch.py
src/ableton_mcp/tools/: analyze.py  guide.py  read.py  write.py
