[project]
name = "ableton-mcp"
version = "0.0.0"
description = "MCP server that lets Claude observe and compose in Ableton Live via AbletonOSC"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mrinal Ghosh" }]
dependencies = [
    "mcp>=1.0.0",
    "python-osc>=1.8.3",
    "pydantic>=2.0",
]

[project.scripts]
ableton-mcp = "ableton_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ableton_mcp"]
